--- a/CSS/style.css
+++ b/CSS/style.css
@@ -481,6 +481,26 @@ font-family: Arial, Helvetica, sans-serif;
   padding: 20px 0;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #fec63e;
+}
+
 
 
 
