--- a/CSS/media-querie.css
+++ b/CSS/media-querie.css
@@ -1,5 +1,9 @@
 /* TABLET - IPAD  */
 @media only screen and (min-width: 788px) and (max-width:979px) {
+  .introducao h1 {
+    font-size: 60px;
+  }
+  
   .qualidade::after {
     right: 66px;
   }
