--- a/CSS/style.css
+++ b/CSS/style.css
@@ -792,6 +792,24 @@ margin-left: 2px;
 }
 
 
+/* JAVASCRIPT */
+[data-slide] {
+  position: relative;
+}
+
+ [data-slide] > * {
+  position: absolute;
+  top: 0px;
+  opacity: 0;
+} 
+
+ [data-slide] > .active {
+  position: relative;
+  opacity: 1;
+  transition: opacity 500ms;
+} 
+
+
 /* ANIMATIONS */
 
 .tracking-in-expand {
